--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "brs-js": "^2.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.24"
   }
 }
